add get diagnosis keys from database draft